syntax = "proto3";

package model;

import "google/protobuf/Empty.proto";

option go_package = "/models";

message GarageCoordinate {
    float latitude = 1;
    float longitude = 2;
}

message Garage {
    string id = 1;
    string name = 2;
    GarageCoordinate coordinate = 3;
}

message GarageList {
    repeated Garage list = 1;
}

message GarageListBuyer {
    map<string, GarageList> list = 1;
}

message GarageUserID {
    string user_id = 1;
}

message GarageAndUserID {
    string user_id = 1;
    Garage garage = 2;
}

service Garages {
    rpc List(GarageUserID) returns (GarageList) {}
    rpc Add(GarageAndUserID) returns (google.protobuf.Empty) {}
}